# gpt3bpe

./: .gitignore  Cargo.toml  README.md  deno.ffi.ts  deno.ts  foo.txt  gpt3bpe.bun.ts  gpt3bpe.deno.ts  gpt3bpe.lua  gptbpe.bun.ts  gptbpe.deno.ts  grammar.txt  interface.ts  main  migrate.ts  mod.rs  nlp.txt  package.json  pnpm-lock.yaml  rust-toolchain.toml  test.js  test_gpt.txt
bpeRanks/: o200k_base.js
src/: chart.rs  encoder.rs  error.rs  factory.rs  grammar.rs  instruments.rs  lib.rs  main.rs  ngram.rs  nlp.rs  reader.rs  stack.rs  state.rs
src/bpe/: README.md  mod.rs  unit.rs  vocabulary.rs
src/bpe/vocabulary/: models.ts  tests.jsonl  tests.jsonl.base
src/cli/: README.md  mod.rs  unit.rs
src/embedding/: README.md  mod.rs  pos.md  schema.sql  unit.rs
src/embeddings/: README.md  metadata.json  mod.rs  schema.sql  unit.rs
src/encoder/: mod.rs  unit.rs
src/error/: mod.rs
src/neural/: mod.rs  tensor.rs  unit.rs
src/nlp/: chart.rs  grammar.rs  mod.rs  nlp.rs  state.rs
src/parser/: mod.rs
src/sampling/: mod.rs
src/tensor/: mod.rs  readme.md  unit.rs
src/text/: mod.rs  unit.rs
src/tokenizer/: README.md  bpe.rs  mod.rs  unit.rs
src/tokenizer/bpe/: r50k.test.jsonl
src/tokenizer/vocabulary/: p50k.jsonl  r50k.jsonl
src/transformer/: encoder.rs  factory.rs
tensor/: interface.ts  mod.rs  similarity.rs  tensor_multiplication.md  unit.rs
