# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "gpt3bpe"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "gpt3bpe"
path = "src/main.rs"
edition = "2021"

[lib]
name = "gpt3bpe"                # The name of the target.
path = "src/lib.rs"             # The source file of the target.
test = true                     # Is tested by default.
doctest = true                  # Documentation examples are tested by default.
# bench = true            # Is benchmarked by default.
# doc = true              # Is documented by default.
# plugin = false          # Used as a compiler plugin (deprecated).
# proc-macro = false      # Set to `true` for a proc-macro library.
# harness = true          # Use libtest harness.
edition = "2021"                # The edition of the target.
crate-type = ["lib", "cdylib"]  # The crate types to generate.
# required-features = []        # Features required to build this target (N/A for lib).

[build]
profiler = true

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = true

[profile.release]
strip = "debuginfo"

[dependencies]
regex = "1.9.4"
unicode-segmentation = "1.10.1"
serde_json = "1.0.114"
argh = "0.1.12"

[dev-dependencies]
rand = "0.8.5"