# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "gpt3bpe"
edition = "2021"
version = "0.1.0"
publish = false

[[bin]]
name = "gpt3bpe"
path = "src/main.rs"

[lib]
name = "gpt3bpe"                # The name of the target.
path = "src/lib.rs"             # The source file of the target.
test = true                     # Is tested by default.
doctest = true                  # Documentation examples are tested by default.
# bench = true            # Is benchmarked by default.
# doc = true              # Is documented by default.
# plugin = false          # Used as a compiler plugin (deprecated).
# proc-macro = false      # Set to `true` for a proc-macro library.
# harness = true          # Use libtest harness.
crate-type = ["lib", "cdylib"]  # The crate types to generate.
# required-features = []        # Features required to build this target (N/A for lib).

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = true

[profile.test]
opt-level = 3 # Optional: better profiling at the cost of slower builds
debug = true  # Keep debug info for readable stack traces

[profile.release]
strip = "debuginfo"

[dependencies]
regex = "1.9.4"
unicode-segmentation = "1.10.1"
serde_json = "1.0.114"
argh = "0.1.12"

[dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph"] }